--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ecodist
-Version: 1.00 
-Date: 2006-04-07
+Version: 1.01 
+Date: 2006-04-11
 Title: Dissimilarity-based functions for ecological analysis
 Author: Sarah Goslee and Dean Urban
 Maintainer: Sarah Goslee <Sarah.Goslee@ars.usda.gov>
 Depends: stats
 Description: Dissimilarity-based analysis functions including ordination and Mantel test functions, intended for use with spatial and community data.
 License: GPL version 2 or newer
-Packaged: Fri Apr  7 15:08:12 2006; sarahg
+Packaged: Tue Apr 11 17:01:05 2006; leisch
