--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: ecodist
-Version: 1.2.2 
-Date: 2008-12-15
+Version: 1.2.3
+Date: 2010-04-12
 Title: Dissimilarity-based functions for ecological analysis
 Author: Sarah Goslee and Dean Urban
 Maintainer: Sarah Goslee <Sarah.Goslee@ars.usda.gov>
 Depends: stats
-Description: Dissimilarity-based analysis functions including ordination and Mantel test functions, intended for use with spatial and community data.
-License: GPL version 2 or newer
-Packaged: Mon Dec 15 09:01:37 2008; sarahg
+Description: Dissimilarity-based analysis functions including
+        ordination and Mantel test functions, intended for use with
+        spatial and community data.
+License: GPL (>= 2)
+Packaged: 2010-04-12 21:47:58 UTC; sarahg
+Repository: CRAN
+Date/Publication: 2010-04-29 06:51:44
